--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Stories</title>
-    <link rel="stylesheet" href="/assets/main.js">
+    <link rel="stylesheet" href="./assets/main.js">
 
 
-    <link rel="stylesheet" href="/assets/vendor/animate.css/animate.min.css">
-    <link rel="stylesheet" href="/assets/vendor/aos/aos.css">
-    <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/vendor/bootstrap-icons/bootstrap-icons.css">
-    <link rel="stylesheet" href="/assets/vendor/glightbox/css/glightbox.min.css">
-    <link rel="stylesheet" href="/assets/vendor/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./assets/vendor/animate.css/animate.min.css">
+    <link rel="stylesheet" href="./assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/vendor/bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="./assets/vendor/glightbox/css/glightbox.min.css">
+    <link rel="stylesheet" href="./assets/vendor/swiper/swiper-bundle.min.css">
 
-    <link rel="stylesheet" href="/assets/style.css">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/responsive.css">
-    <link rel="stylesheet" href="/assets/font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="./assets/font/themify-icons/themify-icons.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
             <div class="row justify-content-center align-content-center">
                 <div class="col-lg-10 d-flex align-content-center justify-content-between">
                     <div class="logo">
-                        <img src="/assets/img/logo.png" alt="">
+                        <img src="./assets/img/logo.png" alt="">
                     </div>
                     <div id="navbar" class="navbar">
                         <ul>
