--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <img src="./assets/img/teamountains.jpg" alt="" class="about-img" data-aos="zoom-out"
+                        <img src="assets/img/teamountains.jpg" alt="" class="about-img" data-aos="zoom-out"
                             data-aos-delay="300">
                     </div>
                 </div>
@@ -214,17 +214,17 @@
                 <div class="row">
                     <div class="col col-lg-4 col-md-12">
                         <div class="certificate-box">
-                            <img class="certificate-img" src="./assets/img/hasat.jpg" alt="">
+                            <img class="certificate-img" src="assets/img/hasat.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-lg-4">
                         <div class="certificate-box">
-                            <img class="certificate-img" src="./assets/img/hatsat-1.jpg" alt="">
+                            <img class="certificate-img" src="assets/img/hatsat-1.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-lg-4">
                         <div class="certificate-box">
-                            <img class="certificate-img" src="./assets/img/hatsat-2.jpg" alt="">
+                            <img class="certificate-img" src="assets/img/hatsat-2.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                 <div class="row g-4">
                     <div class="col-12 col-lg-4 col-md-6">
                         <div class="product-box">
-                            <img src="./assets/img/sp-tratam.png" alt="" class="product-img">
+                            <img src="assets/img/sp-tratam.png" alt="" class="product-img">
                             <div class="product-content mt-3">
                                 <h4 class="product-name">Trà Olong Tấm</h4>
                                 <p class="product-price">45.000<span class="product-gram">/250gr</span></p>
@@ -300,7 +300,7 @@
                     </div>
                     <div class="col-12 col-lg-4 col-md-6">
                         <div class="product-box">
-                            <img src="./assets/img/sp-tratuquy.png" alt="" class="product-img">
+                            <img src="assets/img/sp-tratuquy.png" alt="" class="product-img">
                             <div class="product-content mt-3">
                                 <h4 class="product-name">Trà Olong Tứ Quý</h4>
                                 <p class="product-price">125.000<span class="product-gram">/250gr</span></p>
@@ -310,7 +310,7 @@
                     </div>
                     <div class="col-12 col-lg-4 col-md-6">
                         <div class="product-box">
-                            <img src="./assets/img/sp-trahatlon.png" alt="" class="product-img">
+                            <img src="assets/img/sp-trahatlon.png" alt="" class="product-img">
                             <div class="product-content mt-3">
                                 <h4 class="product-name">Trà Olong Kim Tuyên</h4>
                                 <p class="product-price">70.000<span class="product-gram">/250gr</span></p>
@@ -320,7 +320,7 @@
                     </div>
                     <div class="col-12 col-lg-4 col-md-6">
                         <div class="product-box">
-                            <img src="./assets/img/sp-hongtra.png" alt="" class="product-img">
+                            <img src="assets/img/sp-hongtra.png" alt="" class="product-img">
                             <div class="product-content mt-3">
                                 <h4 class="product-name">Hồng trà</h4>
                                 <p class="product-price">35.000<span class="product-gram">/500gr</span></p>
@@ -330,7 +330,7 @@
                     </div>
                     <div class="col-12 col-lg-4 col-md-6">
                         <div class="product-box">
-                            <img src="./assets/img/sp-hongtrath.png" alt="" class="product-img">
+                            <img src="assets/img/sp-hongtrath.png" alt="" class="product-img">
                             <div class="product-content mt-3">
                                 <h4 class="product-name">Hồng Trà Cao Cấp</h4>
                                 <p class="product-price">95.000<span class="product-gram">/500gr</span></p>
@@ -340,7 +340,7 @@
                     </div>
                     <div class="col-12 col-lg-4 col-md-6">
                         <div class="product-box">
-                            <img src="./assets/img/sp-olong.png" alt="" class="product-img">
+                            <img src="assets/img/sp-olong.png" alt="" class="product-img">
                             <div class="product-content mt-3">
                                 <h4 class="product-name">Trà Olong Cọng</h4>
                                 <p class="product-price">50.000<span class="product-gram">/500gr</span></p>
