--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Green Stories</title>
     <link rel="stylesheet" href="assets/main.js">
 
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/vendor/animate.css/animate.min.css">
     <link rel="stylesheet" href="assets/vendor/aos/aos.css">
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
+
     <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css">
 
@@ -20,27 +22,28 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="assets/font/themify-icons/themify-icons.css">
+
 </head>
 
 <body>
     <!-- Header -->
-    <header id="header" class="fixed-top d-flex align-items-center header-light">
-        <div class="container-fluid">
-            <div class="row justify-content-center align-content-center">
-                <div class="col-lg-10 d-flex align-content-center justify-content-between">
-                    <div class="logo">
-                        <img src="assets/img/logo.png" alt="">
-                    </div>
-                    <div id="navbar" class="navbar">
-                        <ul>
-                            <li><a class="nav-link scrollto active" href="#">Trang chủ</a></li>
-                            <li><a class="nav-link scrollto" href="#about">Giới thiệu</a></li>
-                            <li><a class="nav-link scrollto" href="#product">Sản phẩm</a></li>
-                            <li><a class="nav-link scrollto" href="#services">Dịch vụ</a></li>
-                            <li><a class="nav-link scrollto" href="#support">Hỗ trợ</a></li>
-                            <li><a class="nav-link scrollto" href="#contact">Liên hệ</a></li>
-                        </ul>
-                    </div>
+    <header id="header" class="fixed-top d-flex align-items-center header-light container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light container">
+            <div class="container">
+                <a class="logo navbar-brand col-lg-2" href="#"><img src="assets/img/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="navbar" class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                        <li class="nav-item"><a class="nav-link scrollto active" href="#">Trang chủ</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#about">Giới thiệu</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#product">Sản phẩm</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#services">Dịch vụ</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#support">Hỗ trợ</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#contact">Liên hệ</a></li>
+                    </ul>
                     <form method="get" id="search" class="search-bar d-flex">
                         <input class="search-input" type="text" class="form-control me-1 search-input" name="search"
                             placeholder="Search" id="search" aria-label="search" aria-describedby="basic-search">
@@ -50,8 +53,7 @@
                     </form>
                 </div>
             </div>
-        </div>
-        </div>
+        </nav>
     </header>
     <!-- Section -->
     <section id="hero">
@@ -599,6 +601,9 @@
 
 
     <!-- Vendor JS Files -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="assets/vendor/purecounter/purecounter.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
@@ -611,6 +616,7 @@
 
     <!-- Template Main JS File -->
     <script src="assets/main.js"></script>
+
 </body>
 
 </html>
