--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Stories</title>
     <link rel="stylesheet" href="assets/main.js">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/vendor/animate.css/animate.min.css">
@@ -27,34 +26,45 @@
 
 <body>
     <!-- Header -->
-    <header id="header" class="fixed-top d-flex align-items-center header-light container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light container">
-            <div class="container">
-                <a class="logo navbar-brand col-lg-2" href="#"><img src="assets/img/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="navbar" class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item"><a class="nav-link scrollto active" href="#">Trang chủ</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#about">Giới thiệu</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#product">Sản phẩm</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#services">Dịch vụ</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#support">Hỗ trợ</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#contact">Liên hệ</a></li>
-                    </ul>
-                    <form method="get" id="search" class="search-bar d-flex">
-                        <input class="search-input" type="text" class="form-control me-1 search-input" name="search"
-                            placeholder="Search" id="search" aria-label="search" aria-describedby="basic-search">
-                        <button type="button" class="btn btn-btn-lg btn-success search-btn">
-                            <i class="ti-search footer-icon search-icon"></i>
-                        </button>
-                    </form>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top d-flex align-items-center header-transparent header-color" id="header">
+        <div class="container">
+            <a class="navbar-brand logo" href="#"><img src="assets/img/logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                aria-controls="navbar" id="mobile-menu-btn">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse justify-content-between" id="navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">Giới thiệu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#product">Sản phẩm</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services">Dịch vụ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#support">Hỗ trợ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Liên hệ</a>
+                    </li>
+                </ul>
+                <form method="get" id="search" class="search-bar d-flex">
+                    <input class="search-input" type="text" class="form-control me-1 search-input" name="search"
+                        placeholder="Search" id="search" aria-label="search" aria-describedby="basic-search">
+                    <button type="button" class="btn btn-btn-lg btn-success search-btn">
+                        <i class="ti-search footer-icon search-icon"></i>
+                    </button>
+                </form>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+
     <!-- Section -->
     <section id="hero">
         <div class="hero-container">
@@ -600,10 +610,6 @@
     </footer>
 
 
-    <!-- Vendor JS Files -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
     <script src="assets/vendor/purecounter/purecounter.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
