--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="container statistic mt-5">
                 <h4 class="certificate-heading">Thống kê doanh nghiệp</h4>
                 <div class="row">
-                    <div class="col col-lg-3 col-md-6 mb-4">
+                    <div class="col-6 col-lg-3 col-md-6 mb-4">
                         <div class="statistic-box" data-aos="zoom-in">
                             <div class="statistic-box-left">
                                 <i class="ti-face-smile footer-icon"></i>
@@ -256,7 +256,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-3 col-md-6 mb-4">
+                    <div class="col-6 col-lg-3 col-md-6 mb-4">
                         <div class="statistic-box" data-aos="zoom-in">
                             <div class="statistic-box-left">
                                 <i class="ti-bookmark-alt footer-icon"></i>
@@ -268,7 +268,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-3 col-md-6 mb-4">
+                    <div class="col-6 col-lg-3 col-md-6 mb-4">
                         <div class="statistic-box" data-aos="zoom-in">
                             <div class="statistic-box-left">
                                 <i class="ti-headphone footer-icon"></i>
@@ -280,7 +280,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-3 col-md-6 mb-4">
+                    <div class="col-6 col-lg-3 col-md-6 mb-4">
                         <div class="statistic-box" data-aos="zoom-in">
                             <div class="statistic-box-left">
                                 <i class="ti-user footer-icon"></i>
